2010-01-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Stylesheet href property shows redirected URL unlike other browsers
        https://bugs.webkit.org/show_bug.cgi?id=33683

        Test whether the href property of style sheets contains the original or
        final URL of the redirect chain that lead to the style sheet.

        I couldn't figure out how to test the XSLStyleSheet parts of this
        change.  There didn't seem to be DOM bindings for the href property
        here.  If I missed it, please let me know.

        * http/tests/security/stylesheet-href-redirect-expected.txt: Added.
        * http/tests/security/stylesheet-href-redirect.html: Added.

2010-01-21  Kent Tamura  <tkent@chromium.org>

        Unreviewed. Fix a FAIL test by a wrong input.

        * fast/forms/input-valueasdate-date-expected.txt:
        * fast/forms/script-tests/input-valueasdate-date.js:

2010-01-21  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Eric Seidel.

        Bug 31865 - Re-do ruby layout tests to use only Latin characters
        (https://bugs.webkit.org/show_bug.cgi?id=31865, first patch)

        Re-did pixel layout tests for ruby since non-Latin scripts apparently
        cause issues on other platforms.
        
        * fast/ruby/ruby-empty-rt.html:
        * fast/ruby/ruby-length.html:
        * fast/ruby/ruby-run-break.html:
        * fast/ruby/ruby-runs-spans.html:
        * fast/ruby/ruby-runs.html:
        * fast/ruby/ruby-simple-rp.html:
        * fast/ruby/ruby-simple.html:
        * fast/ruby/ruby-trailing.html:
        * fast/ruby/rubyDOM-insert-rt.html:
        * fast/ruby/rubyDOM-insert-text1.html:
        * fast/ruby/rubyDOM-insert-text2.html:
        * fast/ruby/rubyDOM-insert-text3.html:
        * fast/ruby/rubyDOM-remove-rt1.html:
        * fast/ruby/rubyDOM-remove-rt2.html:
        * fast/ruby/rubyDOM-remove-text1.html:
        * fast/ruby/rubyDOM-remove-text2.html:
